--- a/package.json
+++ b/package.json
@@ -6,13 +6,36 @@
   "scripts": {
     "start": "pnpx tsc -w",
     "dev": "pnpx nodemon",
-    "build": "tsc"
+    "build": "tsc",
+    "format": "prettier --write .",
+    "prepare": "husky install",
+    "check-types":"tsc --pretty --noEmit",
+    "check-formal":"prettier --check .",
+    "check-lint":"eslint . --ext ts --ext tsx --ext js"
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit": "pnpx pretty-quick --staged ng lint ng test",
+      "pre-push":"ng build --aot true"
+    }
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
+    "prettier": "2.8.8",
+    "pretty-quick": "^3.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
